larva-jaxb: added validation samples